--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <details>
           <summary><svg width="14" height="14" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg><strong>OpenScatter</strong></summary>
           <div class="content">
-            <p>ScatterFlow integrates with <strong>OpenScatter</strong> for traditional scattering workflows. To view the official OpenScatter documentation, <a href="#" target="_blank">click here</a>.</p>
+            <p>ScatterFlow integrates with <strong>OpenScatter</strong> for traditional scattering workflows. To view the official OpenScatter documentation, <a href="https://openscatter.notion.site/OpenScatter-Documentation-1af0def6628280868c48d20d0def802b" target="_blank">click here</a>.</p>
           </div>
         </details>
 
