--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
       <summary><svg width="14" height="14" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>Quick Start</summary>
       <div class="content">
 
+        <!-- ───── ScatterFlow overview video (add this near the top of Quick Start) ───── -->
+<h4 class="qs-heading">ScatterFlow Overview</h4>
+<div class="video-container video-sm">
+  <iframe
+    src="https://www.youtube.com/embed/v5lCOQ7_gK4?si=QiUooHwAZu6C4lTM"  <!-- replace VIDEO_ID -->
+    title="ScatterFlow Overview"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen></iframe>
+</div>
+
+        
+
         <!-- Drop objects -->
         <h4 class="qs-heading">Drop objects</h4>
         <img src="media/Animation.gif" alt="Drop objects example" class="qs-placeholder">
